[package]
name = "rust_glium_test"
version = "0.1.0"
authors = ["Christoph Schröder <cs@keksdev.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui-glium-renderer = "0.6.0"
imgui-winit-support = "0.6.0"
cgmath = "0.17.0"
open_track = { path = "open_track"}