[package]
name = "rust_glium_test"
version = "0.1.0"
authors = ["Christoph Schröder <cs@keksdev.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.25.1"
glium = "0.28.0"
imgui-glium-renderer = "0.6.0"
imgui-winit-support = "0.6.0"
winit = "0.23.0"
winit_input_helper = "0.8.0"
cgmath = "0.17.0"
open_track = { path = "open_track"}