[package]
name = "rust_glium_test"
version = "0.1.0"
authors = ["Christoph Schröder <cs@keksdev.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.27.0"
glium = "0.30.2"
imgui-glium-renderer = "0.8.2"
imgui-winit-support = "0.8.2"
winit = "0.25.0"
winit_input_helper = "0.10.0"
cgmath = "0.18.0"
open_track = { path = "open_track"}